actually added the changes + a test .py file

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -9,9 +9,50 @@
   {
    "cells": [
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from IPython.display import YouTubeVideo\n",
+      "YouTubeVideo('MTx6ha6fRwo')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "\n",
+        "        <iframe\n",
+        "            width=\"400\"\n",
+        "            height=300\"\n",
+        "            src=\"https://www.youtube.com/embed/MTx6ha6fRwo\"\n",
+        "            frameborder=\"0\"\n",
+        "            allowfullscreen\n",
+        "        ></iframe>\n",
+        "        "
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "<IPython.lib.display.YouTubeVideo at 0x3aa39b0>"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "###<i>This is the second edit</i>!!!!"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\n",
+      "\n",
       "This is H1\n",
       "=========\n",
       "#this is also a H1\n",
@@ -44,38 +85,6 @@
       "\n",
       "<video control src=\"https://www.youtube.com/watch?v=HaS4NXxL5Qc\"/>"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from IPython.display import YouTubeVideo\n",
-      "YouTubeVideo('MTx6ha6fRwo')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "html": [
-        "\n",
-        "        <iframe\n",
-        "            width=\"400\"\n",
-        "            height=300\"\n",
-        "            src=\"https://www.youtube.com/embed/MTx6ha6fRwo\"\n",
-        "            frameborder=\"0\"\n",
-        "            allowfullscreen\n",
-        "        ></iframe>\n",
-        "        "
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 20,
-       "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x3aa39b0>"
-       ]
-      }
-     ],
-     "prompt_number": 20
     },
     {
      "cell_type": "code",
