--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -9,6 +9,13 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#this is the 3rd edit"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
